chore: initial commit of ee10 migration